Fix background-color to make the outline visible

--- a/crates/main/assets/index.css
+++ b/crates/main/assets/index.css
@@ -230,7 +230,7 @@ main {
     }
 
     .bookmark-item .detail {
-        background-color: var(--background-color);
+        background-color: transparent;
         border: none;
         color: var(--text-color);
         cursor: pointer;
